@@ -1,5 +1,12 @@
 2009-03-23  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
 
+	* src/backend/bacon-video-widget-gst-0.10.c: (setup_vis),
+	(bacon_video_widget_set_show_visuals):
+	Add support for enabling/disabling visualizations while
+	playing some file without requiring a restart.
+
+2009-03-23  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
+
 	* configure.in:
 	* src/backend/bacon-video-widget-gst-0.10.c:
 	(bvw_handle_application_message), (parse_stream_info),
